--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ eframe = { version = "0.23.0", default-features = false, features = [
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
+ehttp = {version = "0.3.1", features = ["streaming"]}
+chrono = {version = "0.4.31", features = ["alloc", "std", "clock", "wasmbind", "serde"]}
+poll-promise = "0.3.0"
 log = "0.4"
 
 # You only need serde if you want app persistence:
