--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ chrono = {version = "0.4.31", features = ["alloc", "std", "clock", "wasmbind", "
 poll-promise = "0.3.0"
 serde_json = "1.0.108"
 log = "0.4"
+rfd = "0.13.0"
+futures = "0.3.30"
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
